# py-my-project-template

./: LICENSE  Makefile  README.md  pyproject.toml  tox.ini
tests/: test_template.py
