[tool.poetry]
name = "template"
version = "0.1.0"
description = "Simple python project template"
authors = ["Brun0-42"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-sugar = "*"
pytest-cov = "*"
mypy = "*"
isort = "*"
tox = "^4.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
